--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "fs-copy-file": "^2.1.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0",
