--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "fs-copy-file": "^2.1.2",
-    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0",
-    "move-file": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -45,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-unused-imports": "^1.1.1"
   }
 }
